--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -28,10 +28,10 @@
 
                 </div>
                 <div class="collapse navbar-collapse" id="menu">
-                    <ul class="nav navbar-nav " id="nav-list">
-                        <li ><a href="#Chicken" title="brand" class="visible-xs">Chicken</a></li>
-                        <li ><a href="#Beef" title="brand" class="visible-xs">Beef</a></li>
-                        <li><a href="#Shushi" title="brand" class="visible-xs">Sushi</a></li>       
+                    <ul class="nav navbar-nav visible-xs" id="nav-list">
+                        <li ><a href="#Chicken" title="brand" >Chicken</a></li>
+                        <li ><a href="#Beef" title="brand" >Beef</a></li>
+                        <li><a href="#Shushi" title="brand" >Sushi</a></li>       
         
                    </ul>     
       
