--- a/module4_solution/index.html
+++ b/module4_solution/index.html
@@ -12,5 +12,6 @@
 </head>
 <body>
   <h1>Daniel Mulugeta Module 4 Solution based on the  Starter</h1>
+  <p> sorry for the late submission , connection was out in my city </p>
 </body>
 </html>
